# TBot

./: .env.example  .gitignore  PROJECT_RULES.md  README.md  Trading_agent.py  ai_trading_agent.py  config.json  example_usage.py  market_structure_analyzer.py  pyproject.toml  requirements.txt  test_trading_agent.py  visualizer.py
.claude/: settings.json
deploy/launchd/: com.tbot.live.plist
docs/: PROGRESS.md
examples/: demo_trading_agent.py
scripts/: build_training_dataset.py  calibrate_model.py  calibrate_model_v2.py  check_account.py  morning_summary.py  refresh_macro_data.py  run_baseline_backtest.py  run_dashboard.py  run_paper_live.py  run_supervisor.py  test_alerts.py  test_dedup.py  test_executor.py  test_live_order.py  test_logger.py  test_macro_cot.py  test_macro_dxy_vix.py  test_macro_features.py  test_macro_yields.py  test_runner.py  test_stream.py  train_model.py  train_model_v2.py  watchdog.py
src/tbot/: config.py
src/tbot/backtest/: engine.py  metrics.py  signals_adapter.py
src/tbot/broker/: executor.py  oanda_client.py  stream.py
src/tbot/core/: agent.py  agent_v2.py  market_structure.py
src/tbot/data/: fetch_oanda_history.py  loader.py
src/tbot/db/: models.py  session.py
src/tbot/features/: builder.py  labeler.py  macro_features.py
src/tbot/live/: runner.py
src/tbot/ml/: calibration.py  predict.py  train.py  walk_forward.py
src/tbot/monitoring/: alerts.py  dashboard.py  (+1 more)
tests/: test_db_models.py  test_loader.py  test_market_structure.py  test_risk_manager.py  test_risk_state.py  test_smc_detectors.py  test_walk_forward.py
(+13 files in other folders)
